[project]
name = "messinaround"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Whisprdev",email = "Waterfalltheory@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "streamlit (>=1.42.0,<2.0.0)" 
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
